saves/test/demo_full_20240802_193545/step_one/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp step_one_tb.v step_one.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
step_one_tb.v:47: $finish called at 430000 (1ps)

iverilog cmd 2 error:

